--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,13 @@
 [package]
 name = "bitburner-oxide"
 version = "0.1.0"
-authors = ["chris"]
+authors = ["Chris Dawkins"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap = { version = "2.33.3", features = ["yaml"]}
+reqwest = "0.11.9"
+serde = { version = "1.0.136", features = ["derive"] }
+serde_json = "1.0.78"
