--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ notify = "4.0.17"
 base64 = "0.13.0"
 futures = "0.3"
 log = "0.4.14"
+tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
