--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,5 @@ notify = "4.0.17"
 base64 = "0.13.0"
 futures = "0.3"
 tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
+log = "0.4.0"
+env_logger = "0.9.0"
