doc: better description

--- a/src/cli.yaml
+++ b/src/cli.yaml
@@ -2,7 +2,13 @@ name: bitburner-oxide
 version: "0.1.0"
 author: Chris Dawkins
 about: |
-  Application to manage Bitburner game scripts.
+
+  Bitburner-oxide will automatically push modified or created script files to a running Bitburner game server.
+  If ran from the same directory as the scripts the --directory flag is not needed.
+  All managed files must exists in the top level directory; bitburner-oxide does not manage nested folders.
+  Bitburner-oxide does not currently support deleting, or pulling files from the game server.
+  Source for bitburner-oxide can be found at https://www.gitlab.com/xsiph/bitburner-oxide
+
 args:
   - token:
       short: t
