--- a/src/cli.yaml
+++ b/src/cli.yaml
@@ -5,7 +5,7 @@ about: |
 
   Bitburner-oxide will automatically push modified or created script files to a running Bitburner game server.
   If ran from the same directory as the scripts the --directory flag is not needed.
-  All managed files must exists in the top level directory; bitburner-oxide does not manage nested folders.
+  All managed files must exist in the top level directory; bitburner-oxide does not manage nested folders.
   Bitburner-oxide does not currently support deleting, or pulling files from the game server.
   Source for bitburner-oxide can be found at https://www.gitlab.com/xsiph/bitburner-oxide
 
