--- a/src/cli.yaml
+++ b/src/cli.yaml
@@ -1,11 +1,16 @@
 name: bitburner-oxide
-version: "0.1.0"
+version: "0.1.1"
 author: Chris Dawkins
 about: |
 
   Bitburner-oxide will automatically push modified or created script files to a running Bitburner game server.
+
   If ran from the same directory as the scripts the --directory flag is not needed.
   All managed files must exist in the top level directory; bitburner-oxide does not manage nested folders.
+
+  Authentication is done by passing in the bearer-token via --token. 
+  Alternatively, the bearer-token can be placed in a file named 'token' in the chosen directory.
+
   Bitburner-oxide does not currently support deleting, or pulling files from the game server.
   Source for bitburner-oxide can be found at https://www.gitlab.com/xsiph/bitburner-oxide
 
@@ -14,7 +19,7 @@ args:
       short: t
       long: token
       help: auth token from game context menu
-      required: true
+      required: false
       takes_value: true
   - directory:
       short: d
