--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bitburner-oxide"
-version = "0.1.2"
+version = "0.1.3"
 authors = ["Chris Dawkins"]
 edition = "2018"
 
@@ -8,12 +8,10 @@ edition = "2018"
 
 [dependencies]
 clap = { version = "2.33.3", features = ["yaml"]}
-reqwest = "0.11.9"
+reqwest = { version = "0.11.9", features = ["blocking"]}
 serde = { version = "1.0.136", features = ["derive"] }
 serde_json = "1.0.78"
 notify = "4.0.17"
 base64 = "0.13.0"
-futures = "0.3"
-tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
 log = "0.4.0"
 env_logger = "0.9.0"
