--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = { version = "2.33.3", features = ["yaml"]}
+clap = { version = "3.1.8", features = ["yaml", "cargo"]}
 reqwest = { version = "0.11.9", features = ["blocking"]}
 serde = { version = "1.0.136", features = ["derive"] }
 serde_json = "1.0.78"
