--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bitburner-oxide"
-version = "0.1.14"
+version = "0.1.15"
 authors = ["Chris Dawkins"]
 edition = "2021"
 
@@ -16,6 +16,7 @@ base64 = "0.13.0"
 log = "0.4.0"
 env_logger = "0.9.0"
 anyhow = "1.0"
+once_cell = "1.12"
 
 [dev-dependencies]
 mockito = "0.30.0"
