--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,16 +7,16 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = { version = "3.2.14", features = ["cargo", "derive"]}
-reqwest = { version = "0.11.11", features = ["blocking"]}
+anyhow = "1.0"
+base64 = "0.13.0"
+confy = { version = "0.5.1", features = ["yaml_conf"] }
+env_logger = "0.9.0"
+log = "0.4.17"
+notify = "5.0.0"
+once_cell = "1.13"
+reqwest = { version = "0.11.11", features = ["blocking"] }
 serde = { version = "1.0.140", features = ["derive"] }
 serde_json = "1.0.82"
-notify = "5.0.0"
-base64 = "0.13.0"
-log = "0.4.17"
-env_logger = "0.9.0"
-anyhow = "1.0"
-once_cell = "1.13"
 
 [dev-dependencies]
 mockito = "0.31.0"
