--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0"
 base64 = "0.13.0"
-confy = { version = "0.5.1", features = ["yaml_conf"] }
+confy = { version = "0.5.1" }
 env_logger = "0.9.0"
 log = "0.4.17"
 notify = "5.0.0"
