--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ anyhow = "1.0"
 base64 = "0.13.0"
 confy = { version = "0.5.1" }
 env_logger = "0.9.0"
+jsonrpc-ws-server = { version = "18.0.0" }
 log = "0.4.17"
 notify = "5.0.0"
 once_cell = "1.13"
